// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Alert Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dlnjwi lnwUfK"
      type="error"
    >
      This is error message
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Alert Error Box 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dlnjwi bBOIeU"
      type="error"
    >
      This is error box message
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Alert Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dlnjwi lnwUfK"
      type="error"
    >
      Sample error message
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Alert Success 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dlnjwi euwQOf"
      type="success"
    >
      This is success message
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Alert Success Box 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dlnjwi lmoKrd"
      type="success"
    >
      This is success box message
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Box Brand 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT gYFURZ"
  >
    <div
      className="sc-hKFxyN hPHceG"
    >
      This is brand box
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Box Default 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT gYFURZ"
  >
    <div
      className="sc-hKFxyN jEdhcT"
    >
      This is default box
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Box Playground 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT gYFURZ"
  >
    <div
      className="sc-hKFxyN jEdhcT"
    >
      Example box content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Bookmark 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-eCApnc fAwhcy"
      disabled={false}
    >
      Bookmark button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Bookmark Active 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-eCApnc fHUvxe"
      disabled={false}
    >
      Bookmark active button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-eCApnc fxcfwS"
      disabled={false}
    >
      Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Disabled 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-eCApnc fxcfwS"
      disabled={true}
    >
      This is disabled button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-eCApnc fxcfwS"
      disabled={false}
    >
      This is sample button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-jSFjdj ciAFUl"
      size="XL"
    >
      This is default heading
    </h1>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Levels 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-jSFjdj ciAFUl"
      size="XL"
    >
      This is level 1 heading
    </h1>
    <h2
      className="sc-jSFjdj bEsEVm"
      size="L"
    >
      This is level 2 heading
    </h2>
    <h3
      className="sc-jSFjdj cMKkja"
      size="M"
    >
      This is level 3 heading
    </h3>
    <h4
      className="sc-jSFjdj jQWmGU"
      size="S"
    >
      This is level 4 heading
    </h4>
    <h5
      className="sc-jSFjdj bEssst"
      size="XS"
    >
      This is level 5 heading
    </h5>
    <h6
      className="sc-jSFjdj bEssst"
      size="XS"
    >
      This is level 6 heading
    </h6>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-jSFjdj ciAFUl"
      size="XL"
    >
      This sample content
    </h1>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Sizes 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-jSFjdj ciAFUl"
      size="XL"
    >
      This is extra large heading
    </h1>
    <h1
      className="sc-jSFjdj bEsEVm"
      size="L"
    >
      This is large heading
    </h1>
    <h1
      className="sc-jSFjdj cMKkja"
      size="M"
    >
      This is medium heading
    </h1>
    <h1
      className="sc-jSFjdj jQWmGU"
      size="S"
    >
      This is small heading
    </h1>
    <h1
      className="sc-jSFjdj bEssst"
      size="XS"
    >
      This is extra small heading
    </h1>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Custom Width 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fujyAs jFWQQU"
    >
      <input
        className="sc-gKAaRy ksTXtK"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fujyAs dHPAkY"
    >
      <input
        className="sc-gKAaRy ksTXtK"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fujyAs dHPAkY"
    >
      <input
        className="sc-gKAaRy bTMKWG"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Password 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fujyAs izckOL"
    >
      <input
        className="sc-gKAaRy ksTXtK"
        type="password"
      />
      <button
        className="sc-iCoGMd bljyTY"
        onClick={[Function]}
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fujyAs dHPAkY"
    >
      <input
        className="sc-gKAaRy ksTXtK"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Price 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fujyAs ejfzOT"
    >
      <input
        className="sc-gKAaRy ksTXtK"
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Label Defaul 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-pNWdM innbAN"
    >
      This is default label
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Label Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-pNWdM innbAN"
    >
      Label 
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Logo Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Crowdfund logo"
        src="logo-black.svg"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/Logo Playground 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Crowdfund logo"
        src="logo-white.svg"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/Logo White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Crowdfund logo"
        src="logo-white.svg"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/MenuLink Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      aria-current={null}
      className="sc-jrsJWt efzWLW"
      href="/fancy-url"
      onClick={[Function]}
    >
      Black menu link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/MenuLink Playground 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      aria-current={null}
      className="sc-jrsJWt jTSVsC"
      href="/fancy-url"
      onClick={[Function]}
    >
      Menu link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/MenuLink White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      aria-current={null}
      className="sc-jrsJWt jTSVsC"
      href="/fancy-url"
      onClick={[Function]}
    >
      White menu link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/Paragraph Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <p
      className="sc-kEqXSa gDyCab"
    >
      Fusce pellentesque quam semper nulla placerat vehicula. Donec et nibh tortor. Nulla ut felis in neque tempus volutpat ac et justo. Nulla elementum posuere lectus id tincidunt. Phasellus elementum metus arcu, non ultrices odio efficitur ut. Cras tellus quam, vestibulum vel porttitor a, dignissim sit amet dui. Vestibulum varius neque at lacus consequat, nec eleifend orci rhoncus. Praesent viverra non sapien vel blandit. Nulla sollicitudin mauris nisl, id elementum ante blandit in. Praesent interdum elit lorem, ac malesuada purus sollicitudin quis. Nulla condimentum tortor tortor, ac imperdiet tortor faucibus sit amet. Aliquam nibh velit, finibus vel diam sit amet, semper pellentesque libero. Nulla felis nisl, convallis ac molestie eu, pulvinar sit amet libero. Nam nisl arcu, fermentum tristique dui at, tincidunt maximus sem. Phasellus aliquet vestibulum urna eu facilisis. Pellentesque aliquam interdum tortor eu maximus.
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms/Paragraph Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <p
      className="sc-kEqXSa gDyCab"
    >
      This is sample paragraph content
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms/ProgressBar Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <progress
      className="sc-iqAclL goghoA"
      max={100}
      value={50}
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/ProgressBar Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <progress
      className="sc-iqAclL goghoA"
      max={100}
      value={30}
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Checked 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={true}
      className="sc-crzoAE kqFdF"
      disabled={false}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={false}
      className="sc-crzoAE kqFdF"
      disabled={false}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Disabled 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={false}
      className="sc-crzoAE kqFdF"
      disabled={true}
      readOnly={true}
      type="radio"
    />
    <input
      checked={true}
      className="sc-crzoAE kqFdF"
      disabled={true}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={false}
      className="sc-crzoAE kqFdF"
      disabled={false}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Spinner Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-dIsUp ftQnWv"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Spinner Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-dIsUp ftQnWv"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/TextLink Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      className="sc-bqGGPW gNNTMm"
      href="/default"
      onClick={[Function]}
    >
      Default link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/TextLink Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      className="sc-bqGGPW gNNTMm"
      href="/playground"
      onClick={[Function]}
    >
      Playground text link
    </a>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-fKgJPI eNTpkt"
    >
      <header
        className="sc-iemWCZ jKLJGR"
      >
        <h3
          className="sc-jSFjdj jQWmGU"
          size="S"
        >
          Title of default card
        </h3>
      </header>
      <p
        className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-fnVZcZ imDLkW"
      >
        <button
          className="sc-eCApnc fxcfwS"
          disabled={false}
          onClick={[Function]}
        >
          Default action
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-fKgJPI eNTpkt"
    >
      <header
        className="sc-iemWCZ jKLJGR"
      >
        <h3
          className="sc-jSFjdj jQWmGU"
          size="S"
        >
          Example card title
        </h3>
      </header>
      <p
        className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-fnVZcZ imDLkW"
      >
        <button
          className="sc-eCApnc fxcfwS"
          disabled={false}
          onClick={[Function]}
        >
          Action button
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Radio Card 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-fKgJPI VuTls"
    >
      <input
        checked={false}
        className="sc-crzoAE kqFdF"
        disabled={false}
        id="radio-card"
        name="radio-card"
        onChange={[Function]}
        type="radio"
        value="radio-card"
      />
      <header
        className="sc-iemWCZ jKLJGR"
      >
        <label
          className="sc-jSFjdj sc-dIvrsQ bEssst ehbliv"
          htmlFor="radio-card"
          size="XS"
        >
          Title of Radio Card
        </label>
        <p
          className="sc-kEqXSa sc-hHEiqL gDyCab lcQiiB"
        >
          Pledge 
          $25
           or more
        </p>
        <div
          className="sc-dlMDgC kyOnqx"
        >
          <strong
            className="sc-jSFjdj bEssst"
            size="XS"
          >
            60
          </strong>
          <p
            className="sc-kEqXSa gDyCab"
          >
            left
          </p>
        </div>
      </header>
      <p
        className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Radio Card Out Of Stock 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-fKgJPI dovVEv"
    >
      <input
        checked={false}
        className="sc-crzoAE kqFdF"
        disabled={true}
        id="radio-card"
        name="radio-card-out-of-stock"
        onChange={[Function]}
        type="radio"
        value="radio-card"
      />
      <header
        className="sc-iemWCZ jKLJGR"
      >
        <label
          className="sc-jSFjdj sc-dIvrsQ bEssst ehbliv"
          htmlFor="radio-card"
          size="XS"
        >
          Title of Radio Card
        </label>
        <p
          className="sc-kEqXSa sc-hHEiqL gDyCab lcQiiB"
        >
          Pledge 
          $25
           or more
        </p>
        <div
          className="sc-dlMDgC kyOnqx"
        >
          <strong
            className="sc-jSFjdj bEssst"
            size="XS"
          >
            0
          </strong>
          <p
            className="sc-kEqXSa gDyCab"
          >
            left
          </p>
        </div>
      </header>
      <p
        className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Radio Card Selected 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-fKgJPI eYzWhP"
    >
      <input
        checked={true}
        className="sc-crzoAE kqFdF"
        disabled={false}
        id="radio-card"
        name="radio-selected"
        onChange={[Function]}
        type="radio"
        value="radio-card"
      />
      <header
        className="sc-iemWCZ jKLJGR"
      >
        <label
          className="sc-jSFjdj sc-dIvrsQ bEssst ehbliv"
          htmlFor="radio-card"
          size="XS"
        >
          Title of Radio Card
        </label>
        <p
          className="sc-kEqXSa sc-hHEiqL gDyCab lcQiiB"
        >
          Pledge 
          $25
           or more
        </p>
        <div
          className="sc-dlMDgC kyOnqx"
        >
          <strong
            className="sc-jSFjdj bEssst"
            size="XS"
          >
            10
          </strong>
          <p
            className="sc-kEqXSa gDyCab"
          >
            left
          </p>
        </div>
      </header>
      <p
        className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-fnVZcZ kzmBdn"
      >
        <form
          className="sc-fFSPTT kFHgxh"
          onSubmit={[Function]}
        >
          <div
            className="sc-hBMUJo hfdfLh"
          >
            <label
              className="sc-pNWdM sc-ksluID innbAN eTifvC"
              htmlFor="pledge"
            >
              Enter your pledge: 
            </label>
            <div
              className="sc-fujyAs fhJFer"
            >
              <input
                className="sc-gKAaRy ksTXtK"
                defaultValue={25}
                id="pledge"
                name="pledge"
                onBlur={[Function]}
                onChange={[Function]}
                type="number"
              />
            </div>
          </div>
          <button
            className="sc-eCApnc fxcfwS"
            disabled={false}
            type="submit"
          >
            Continue
          </button>
        </form>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Reward Card 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-fKgJPI eNTpkt"
    >
      <header
        className="sc-iemWCZ jKLJGR"
      >
        <h3
          className="sc-jSFjdj jQWmGU"
          size="S"
        >
          Title of Reward Card
        </h3>
        <p
          className="sc-kEqXSa sc-hHEiqL gDyCab fANLQJ"
        >
          Pledge 
          $25
           or more
        </p>
      </header>
      <p
        className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-fnVZcZ imDLkW"
      >
        <div
          className="sc-bkbkJK dxbMNx"
        >
          <strong
            className="sc-jSFjdj ciAFUl"
            size="XL"
          >
            60
          </strong>
          <p
            className="sc-kEqXSa gDyCab"
          >
            left
          </p>
        </div>
        <button
          className="sc-eCApnc fxcfwS"
          disabled={false}
          onClick={[Function]}
        >
          Select Reward
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Reward Card Out Of Stock 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-fKgJPI jzNZxS"
    >
      <header
        className="sc-iemWCZ jKLJGR"
      >
        <h3
          className="sc-jSFjdj jQWmGU"
          size="S"
        >
          Title of Reward Card Out of stock
        </h3>
        <p
          className="sc-kEqXSa sc-hHEiqL gDyCab fANLQJ"
        >
          Pledge 
          $200
           or more
        </p>
      </header>
      <p
        className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-fnVZcZ imDLkW"
      >
        <div
          className="sc-bkbkJK dxbMNx"
        >
          <strong
            className="sc-jSFjdj ciAFUl"
            size="XL"
          >
            0
          </strong>
          <p
            className="sc-kEqXSa gDyCab"
          >
            left
          </p>
        </div>
        <button
          className="sc-eCApnc fxcfwS"
          disabled={true}
          onClick={[Function]}
        >
          Out of stock
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Cardinal Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-bCwfaz jHydAz"
    >
      <h3
        className="sc-jSFjdj sc-iwajpm ciAFUl kKsTZo"
        size="XL"
      >
        56
      </h3>
      <p
        className="sc-kEqXSa sc-cxNHIi gDyCab hDXoFJ"
      >
        days left
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Cardinal Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-bCwfaz jHydAz"
    >
      <h3
        className="sc-jSFjdj sc-iwajpm ciAFUl kKsTZo"
        size="XL"
      >
        5,007
      </h3>
      <p
        className="sc-kEqXSa sc-cxNHIi gDyCab hDXoFJ"
      >
        total backers
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Cardinal Price Format 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-bCwfaz jHydAz"
    >
      <h3
        className="sc-jSFjdj sc-iwajpm ciAFUl kKsTZo"
        size="XL"
      >
        $78,000
      </h3>
      <p
        className="sc-kEqXSa sc-cxNHIi gDyCab hDXoFJ"
      >
        of $100,000 backed
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-hBMUJo deOsuY"
    >
      <label
        className="sc-pNWdM sc-ksluID innbAN eTifvC"
        htmlFor="default-input"
      >
        Default input: 
      </label>
      <div
        className="sc-fujyAs dHPAkY"
      >
        <input
          className="sc-gKAaRy ksTXtK"
          id="default-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-hBMUJo deOsuY"
    >
      <label
        className="sc-pNWdM sc-ksluID innbAN eTifvC"
        htmlFor="error-input"
      >
        Error input: 
      </label>
      <div
        className="sc-fujyAs dHPAkY"
      >
        <input
          className="sc-gKAaRy bTMKWG"
          id="error-input"
        />
      </div>
      <label
        className="sc-dlnjwi lnwUfK"
        type="error"
      >
        Sample error message
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-hBMUJo deOsuY"
    >
      <label
        className="sc-pNWdM sc-ksluID innbAN eTifvC"
        htmlFor="playground-input"
      >
        Example label: 
      </label>
      <div
        className="sc-fujyAs dHPAkY"
      >
        <input
          className="sc-gKAaRy ksTXtK"
          id="playground-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Single Column 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-hBMUJo hfdfLh"
    >
      <label
        className="sc-pNWdM sc-ksluID innbAN eTifvC"
        htmlFor="single-column-input"
      >
        Single column input: 
      </label>
      <div
        className="sc-fujyAs dHPAkY"
      >
        <input
          className="sc-gKAaRy ksTXtK"
          id="single-column-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Single Column Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-hBMUJo hfdfLh"
    >
      <label
        className="sc-pNWdM sc-ksluID innbAN eTifvC"
        htmlFor="single-column-input"
      >
        Single column input: 
      </label>
      <div
        className="sc-fujyAs dHPAkY"
      >
        <input
          className="sc-gKAaRy bTMKWG"
          id="single-column-input"
        />
      </div>
      <label
        className="sc-dlnjwi lnwUfK"
        type="error"
      >
        Sample error message
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer Default 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-lmgQwP dZInpu"
    >
      <div
        className="sc-iJCRrE fkmJlQ"
      >
        <div>
          <a
            href="/"
            onClick={[Function]}
          >
            <img
              alt="Crowdfund logo"
              src="logo-black.svg"
            />
          </a>
          <p
            className="sc-kEqXSa sc-bYwzuL gDyCab gaeCCw"
          >
            Crowdfunding means a way of funding by the community. It is an innovative model of financing creative ideas through the community.
          </p>
        </div>
        <nav
          className="sc-ezzafa eGDrcw"
        >
          <div>
            <h3
              className="sc-jSFjdj sc-iklJeh bEssst fqWAtP"
              size="XS"
            >
              Help
            </h3>
            <ul
              className="sc-kLojOw llvpTM"
            >
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/privacy-policy"
                  onClick={[Function]}
                >
                  Privacy Policy
                </a>
              </li>
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/regulations"
                  onClick={[Function]}
                >
                  Regulations
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
      <div
        className="sc-giAqHp iPjcKs"
      >
        <div
          className="sc-iJCRrE fkmJlQ"
        >
          <p
            className="sc-pNWdM innbAN"
          >
            © Copyright 
            2021
             by Crowdfund
          </p>
          <ul
            className="sc-kLojOw cLAsWf"
          >
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://facebook.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Facebook
              </a>
            </li>
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://instagram.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Instagram
              </a>
            </li>
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://twitter.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Twitter
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer Only Copy 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-lmgQwP kiMLdZ"
    >
      <p
        className="sc-pNWdM innbAN"
      >
        © Copyright 
        2021
         by Crowdfund
      </p>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer Playground 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-lmgQwP dZInpu"
    >
      <div
        className="sc-iJCRrE fkmJlQ"
      >
        <div>
          <a
            href="/"
            onClick={[Function]}
          >
            <img
              alt="Crowdfund logo"
              src="logo-black.svg"
            />
          </a>
          <p
            className="sc-kEqXSa sc-bYwzuL gDyCab gaeCCw"
          >
            Crowdfunding means a way of funding by the community. It is an innovative model of financing creative ideas through the community.
          </p>
        </div>
        <nav
          className="sc-ezzafa bOlSaY"
        >
          <div>
            <h3
              className="sc-jSFjdj sc-iklJeh bEssst fqWAtP"
              size="XS"
            >
              Menu
            </h3>
            <ul
              className="sc-kLojOw llvpTM"
            >
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/about"
                  onClick={[Function]}
                >
                  About
                </a>
              </li>
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/discover"
                  onClick={[Function]}
                >
                  Discover
                </a>
              </li>
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/get-started"
                  onClick={[Function]}
                >
                  Get Started
                </a>
              </li>
            </ul>
          </div>
          <div>
            <h3
              className="sc-jSFjdj sc-iklJeh bEssst fqWAtP"
              size="XS"
            >
              Help
            </h3>
            <ul
              className="sc-kLojOw llvpTM"
            >
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/privacy-policy"
                  onClick={[Function]}
                >
                  Privacy Policy
                </a>
              </li>
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/regulations"
                  onClick={[Function]}
                >
                  Regulations
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
      <div
        className="sc-giAqHp iPjcKs"
      >
        <div
          className="sc-iJCRrE fkmJlQ"
        >
          <p
            className="sc-pNWdM innbAN"
          >
            © Copyright 
            2021
             by Crowdfund
          </p>
          <ul
            className="sc-kLojOw cLAsWf"
          >
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://facebook.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Facebook
              </a>
            </li>
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://instagram.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Instagram
              </a>
            </li>
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://twitter.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Twitter
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer With Nav 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-lmgQwP dZInpu"
    >
      <div
        className="sc-iJCRrE fkmJlQ"
      >
        <div>
          <a
            href="/"
            onClick={[Function]}
          >
            <img
              alt="Crowdfund logo"
              src="logo-black.svg"
            />
          </a>
          <p
            className="sc-kEqXSa sc-bYwzuL gDyCab gaeCCw"
          >
            Crowdfunding means a way of funding by the community. It is an innovative model of financing creative ideas through the community.
          </p>
        </div>
        <nav
          className="sc-ezzafa bOlSaY"
        >
          <div>
            <h3
              className="sc-jSFjdj sc-iklJeh bEssst fqWAtP"
              size="XS"
            >
              Menu
            </h3>
            <ul
              className="sc-kLojOw llvpTM"
            >
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/about"
                  onClick={[Function]}
                >
                  About
                </a>
              </li>
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/discover"
                  onClick={[Function]}
                >
                  Discover
                </a>
              </li>
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/get-started"
                  onClick={[Function]}
                >
                  Get Started
                </a>
              </li>
            </ul>
          </div>
          <div>
            <h3
              className="sc-jSFjdj sc-iklJeh bEssst fqWAtP"
              size="XS"
            >
              Help
            </h3>
            <ul
              className="sc-kLojOw llvpTM"
            >
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/privacy-policy"
                  onClick={[Function]}
                >
                  Privacy Policy
                </a>
              </li>
              <li>
                <a
                  className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                  href="/regulations"
                  onClick={[Function]}
                >
                  Regulations
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
      <div
        className="sc-giAqHp iPjcKs"
      >
        <div
          className="sc-iJCRrE fkmJlQ"
        >
          <p
            className="sc-pNWdM innbAN"
          >
            © Copyright 
            2021
             by Crowdfund
          </p>
          <ul
            className="sc-kLojOw cLAsWf"
          >
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://facebook.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Facebook
              </a>
            </li>
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://instagram.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Instagram
              </a>
            </li>
            <li>
              <a
                className="sc-jrsJWt sc-jJMGnK efzWLW ilUrDj"
                href="https://twitter.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Twitter
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/GenericLoadingIndicator Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-hiKfDv jrUhIV"
    >
      <div
        className="sc-dIsUp ftQnWv"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/GenericLoadingIndicator Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-hiKfDv jrUhIV"
    >
      <div
        className="sc-dIsUp ftQnWv"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gXfVKN dQKqQQ"
  >
    <div
      className="sc-cBoqAE TTQOw"
    >
      <button
        className="sc-ciSkZP fWNzNx"
        onClick={[Function]}
      />
      <p>
        Content of Default Modal
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Described 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gXfVKN dQKqQQ"
  >
    <div
      className="sc-cBoqAE TTQOw"
    >
      <button
        className="sc-ciSkZP fWNzNx"
        onClick={[Function]}
      />
      <h2
        className="sc-jSFjdj sc-jcwpoC jQWmGU hlsGQj"
        size="S"
      >
        Desscribed Modal Title
      </h2>
      <p
        className="sc-kEqXSa sc-carFqZ gDyCab bHmIis"
      >
        Sample described modal description
      </p>
      <p>
        Content of Described Modal
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gXfVKN dQKqQQ"
  >
    <div
      className="sc-cBoqAE TTQOw"
    >
      <button
        className="sc-ciSkZP fWNzNx"
        onClick={[Function]}
      />
      <p>
        Example content
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal With Complex Children 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gXfVKN dQKqQQ"
  >
    <div
      className="sc-cBoqAE TTQOw"
    >
      <button
        className="sc-ciSkZP fWNzNx"
        onClick={[Function]}
      />
      <h2
        className="sc-jSFjdj sc-jcwpoC jQWmGU hlsGQj"
        size="S"
      >
        Complex children data
      </h2>
      <p
        className="sc-kEqXSa sc-carFqZ gDyCab bHmIis"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In posuere ante quis dui dapibus. eget malesuada orci porta. Ut sed purus eget tellus porta facilisis sed eu risus.
      </p>
      <div
        className="sc-iTVJFM lDWnT"
      >
        <article
          className="sc-fKgJPI VuTls"
        >
          <input
            checked={false}
            className="sc-crzoAE kqFdF"
            disabled={false}
            id="no-reward"
            name="no-reward"
            onChange={[Function]}
            type="radio"
            value="no-reward"
          />
          <header
            className="sc-iemWCZ jKLJGR"
          >
            <label
              className="sc-jSFjdj sc-dIvrsQ bEssst ehbliv"
              htmlFor="no-reward"
              size="XS"
            >
              Pledge with no reward
            </label>
          </header>
          <p
            className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
        <article
          className="sc-fKgJPI VuTls"
        >
          <input
            checked={false}
            className="sc-crzoAE kqFdF"
            disabled={false}
            id="bamboo"
            name="bamboo"
            onChange={[Function]}
            type="radio"
            value="bamboo"
          />
          <header
            className="sc-iemWCZ jKLJGR"
          >
            <label
              className="sc-jSFjdj sc-dIvrsQ bEssst ehbliv"
              htmlFor="bamboo"
              size="XS"
            >
              Bamboo Stand
            </label>
            <p
              className="sc-kEqXSa sc-hHEiqL gDyCab lcQiiB"
            >
              Pledge 
              $25
               or more
            </p>
            <div
              className="sc-dlMDgC kyOnqx"
            >
              <strong
                className="sc-jSFjdj bEssst"
                size="XS"
              >
                101
              </strong>
              <p
                className="sc-kEqXSa gDyCab"
              >
                left
              </p>
            </div>
          </header>
          <p
            className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
        <article
          className="sc-fKgJPI VuTls"
        >
          <input
            checked={false}
            className="sc-crzoAE kqFdF"
            disabled={false}
            id="black-edition"
            name="black-edition"
            onChange={[Function]}
            type="radio"
            value="black-edition"
          />
          <header
            className="sc-iemWCZ jKLJGR"
          >
            <label
              className="sc-jSFjdj sc-dIvrsQ bEssst ehbliv"
              htmlFor="black-edition"
              size="XS"
            >
              Black Edition Stand
            </label>
            <p
              className="sc-kEqXSa sc-hHEiqL gDyCab lcQiiB"
            >
              Pledge 
              $75
               or more
            </p>
            <div
              className="sc-dlMDgC kyOnqx"
            >
              <strong
                className="sc-jSFjdj bEssst"
                size="XS"
              >
                64
              </strong>
              <p
                className="sc-kEqXSa gDyCab"
              >
                left
              </p>
            </div>
          </header>
          <p
            className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
        <article
          className="sc-fKgJPI dovVEv"
        >
          <input
            checked={false}
            className="sc-crzoAE kqFdF"
            disabled={true}
            id="mahogany"
            name="mahogany"
            onChange={[Function]}
            type="radio"
            value="mahogany"
          />
          <header
            className="sc-iemWCZ jKLJGR"
          >
            <label
              className="sc-jSFjdj sc-dIvrsQ bEssst ehbliv"
              htmlFor="mahogany"
              size="XS"
            >
              Mahogany Special Edition
            </label>
            <p
              className="sc-kEqXSa sc-hHEiqL gDyCab lcQiiB"
            >
              Pledge 
              $200
               or more
            </p>
            <div
              className="sc-dlMDgC kyOnqx"
            >
              <strong
                className="sc-jSFjdj bEssst"
                size="XS"
              >
                0
              </strong>
              <p
                className="sc-kEqXSa gDyCab"
              >
                left
              </p>
            </div>
          </header>
          <p
            className="sc-kEqXSa sc-kfYoZR gDyCab hFQsRl"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Without Close Button 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gXfVKN dQKqQQ"
  >
    <div
      className="sc-cBoqAE TTQOw"
    >
      <p>
        Content of Without Close Button Modal
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-iBzEeX gjmRKH"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-black.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-efHYUO fZwGho"
        >
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt efzWLW"
              href="/about"
              onClick={[Function]}
            >
              About
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt efzWLW"
              href="/discover"
              onClick={[Function]}
            >
              Discover
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt efzWLW"
              href="/get-started"
              onClick={[Function]}
            >
              Get Started
            </a>
          </li>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Playground 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-iBzEeX gjmRKH"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-white.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-efHYUO fZwGho"
        >
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt jTSVsC"
              href="/about"
              onClick={[Function]}
            >
              About
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt jTSVsC"
              href="/discover"
              onClick={[Function]}
            >
              Discover
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt jTSVsC"
              href="/get-started"
              onClick={[Function]}
            >
              Get Started
            </a>
          </li>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-iBzEeX gjmRKH"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-white.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-efHYUO fZwGho"
        >
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt jTSVsC"
              href="/about"
              onClick={[Function]}
            >
              About
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt jTSVsC"
              href="/discover"
              onClick={[Function]}
            >
              Discover
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-jrsJWt jTSVsC"
              href="/get-started"
              onClick={[Function]}
            >
              Get Started
            </a>
          </li>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Without Nav Items Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-iBzEeX gweKMr"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-black.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-efHYUO fZwGho"
        />
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Without Nav Items White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-iBzEeX gweKMr"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-white.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-efHYUO fZwGho"
        />
      </nav>
    </header>
  </div>
</div>
`;
